# evident-core

./: CHANGELOG.md  Cargo.evident  LICENSE  README.md  README_EN.md  README_RU.md  STRATEGY.md
.github/workflows/: ci.yml
crates/evident-audit/: Cargo.toml
crates/evident-audit/src/: chain.rs  evidence.rs  lib.rs  writer.rs
crates/evident-case/: Cargo.toml
crates/evident-case/src/: lib.rs
crates/evident-case/src/audit/: hash.rs  mod.rs  verify.rs  writer.rs
crates/evident-case/src/case/: chain.rs  engine.rs  manifest.rs  meta.rs  mod.rs
crates/evident-case/src/crypto/: mod.rs  signer.rs
crates/evident-cli/: Cargo.toml
crates/evident-cli/src/: case_cmd.rs  git.rs  main.rs
crates/evident-cli/tests/: integration.rs
crates/evident-crypto/: Cargo.toml
crates/evident-crypto/src/: canonical.rs  file_signer.rs  hash.rs  key_store.rs  keys.rs  lib.rs
crates/evident-tsa/: Cargo.toml
crates/evident-tsa/src/: lib.rs  native.rs  ts_request.rs
