[package]
name = "evident-audit"
version = "0.1.0"
edition = "2021"

[dependencies]
evident-crypto = { path = "../evident-crypto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
dirs = "5"
fs2 = "0.4"
