[package]
name = "evident-case"
version = "0.1.0"
edition = "2021"

[dependencies]
evident-crypto = { path = "../evident-crypto" }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "=2.1.1", features = ["pkcs8", "rand_core"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
rand = "0.8"
