[package]
name = "evident-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "evident"
path = "src/main.rs"

[dependencies]
evident-crypto = { path = "../evident-crypto" }
evident-tsa = { path = "../evident-tsa" }
evident-audit = { path = "../evident-audit" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rpassword = "7"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
base64 = "0.22"
zeroize = { version = "1", features = ["derive"] }
ed25519-dalek = { version = "=2.1.1", features = ["pkcs8", "rand_core"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
