[package]
name = "evident-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
ed25519-dalek = { version = "=2.1.1", features = ["pkcs8", "rand_core"] }
argon2 = "0.5"
aes-gcm = "0.10"
zeroize = { version = "1", features = ["derive"] }
subtle = "2"
base64 = "0.22"
rand = "0.8"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
dirs = "5"
